--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -120,7 +120,7 @@ const web3formsAccessKey = SITE.web3formsAccessKey || "";
   <button
     type="submit"
     id="submit-button"
-    class="w-full px-6 py-3 bg-black text-white rounded-lg hover:bg-gray-800 transition-colors font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-black disabled:opacity-50 disabled:cursor-not-allowed"
+    class="btn-pill w-full px-6 py-3 font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-black disabled:opacity-50 disabled:cursor-not-allowed"
   >
     <span id="submit-text">Send Message</span>
     <span id="submit-loading" class="hidden">Sending...</span>
